# GameOperation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
recordings/: sample.json  sample2.json  sample3.json  sample4.json  sampleok.json
src/game_test_py/: __init__.py  cli.py  main.py
src/game_test_py/desktop/: app.py
src/game_test_py/tools/: recorder.py
tests/: test_main.py
