[tool.poetry]
name = 'game-test-py'
version = '0.1.0'
description = 'A Python project managed by Poetry'
license = 'MIT'
authors = ['Your Name <you@example.com>']
readme = 'README.md'
packages = [{ include = 'game_test_py', from = 'src' }]

[tool.poetry.dependencies]
python = '>=3.12,<3.14'

[tool.poetry.group.dev.dependencies]
pytest = '^8.3.3'
ruff = '^0.6.9'
black = '^24.8.0'
mypy = '^1.11.2'
pre-commit = '^3.8.0'
pytest-cov = '^5.0.0'

[tool.pytest.ini_options]
addopts = '-q'
testpaths = ['tests']

[tool.ruff]
line-length = 100
indent-width = 4
respect-gitignore = true
fix = true

[tool.ruff.lint]
select = ['E','F','I','UP','B','N','A','SIM','RET']
ignore = ['E501']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'lf'

[tool.black]
line-length = 100
preview = true

[tool.mypy]
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ['import-not-found']
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ['.venv','build','dist']

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
